src/test/ui/issues/issue-36163.stderr
error[E0391]: cycle detected when const checking `Foo::B::{{constant}}#0`
  --> $DIR/issue-36163.rs:4:9
   |
LL |     B = A,
   |         ^
   |
note: ...which requires const checking `A`...
  --> $DIR/issue-36163.rs:1:18
   |
LL | const A: isize = Foo::B as isize;
   |                  ^^^^^^^^^^^^^^^
   = note: ...which again requires const checking `Foo::B::{{constant}}#0`, completing the cycle
note: cycle used when processing `Foo::B::{{constant}}#0`
  --> $DIR/issue-36163.rs:4:9
   |
LL |     B = A,
   |         ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
